# HALA-Voice-Onset-Detector-App

./: LICENSE  README.md  pyproject.toml
